2002-03-12  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnslashdot.el (nnslashdot-request-article): Remove IFRAME.

2002-03-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pop3.el (pop3-open-server): Set process buffer unibyte.

2002-03-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-fun.el (gnus-subscribe-to-mailing-list): New function.

2002-03-10  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnslashdot.el (nnslashdot-request-article): Remove javascript
	too.

2002-03-09  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-save-parts-default-mime): Remove
	duplication.
	(gnus-summary-save-parts-type-history): Ditto.
	(gnus-summary-save-parts-last-directory): Ditto.
	From: andre@slamdunknetworks.com

2002-03-09  Paul Jarc  <prj@po.cwru.edu

	* gnus-start.el (gnus-auto-subscribed-groups): Include nnmaildir.

2002-03-06  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnslashdot.el (nnslashdot-request-article): Use "<!-- no ad 6
	-->" as the end of the first article.

	* gnus-msg.el (gnus-summary-resend-message-edit): New function.
	From Matthieu Moy <Matthieu.Moy@imag.fr>

	* message.el (message-add-action): Use add-to-list.
	(message-delete-action): New function.

	* nndoc.el (nndoc-mail-in-mail-type-p): Break a long regexp into
	pieces.

2002-03-05  Paul Jarc  <prj@po.cwru.edu>

	* nnnil.el: New file.
	* gnus.el (gnus-valid-select-methods): Include nnnil.

2002-03-05  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-syntax-checks): Because canlock is
	supported, we disable sender syntax check.
	(message-shoot-gnksa-feet): Add cancel-messages option doc.

	* gnus-draft.el (gnus-draft-send): If interactive, use its default
	value of message-syntax-checks.

	* qp.el (quoted-printable-decode-region): Doc addition.
	From: Eli Zaretskii <eliz@is.elta.co.il>

	* mail-source.el (make-source-make-complex-temp-name): Use
	make-temp-file.

	* mm-util.el (mm-make-temp-file): New function.
	* nneething.el (nneething-file-name): Use it.