@@ -48,9 +48,12 @@
     (require 'canlock)))
 (require 'mailheader)
 (require 'nnheader)
-;; This is apparently necessary even though things are autoloaded:
+;; This is apparently necessary even though things are autoloaded.
+;; Because we dynamically bind mail-abbrev-mode-regexp, we'd better
+;; require mailabbrev here.
 (if (featurep 'xemacs)
-    (require 'mail-abbrevs))
+    (require 'mail-abbrevs)
+  (require 'mailabbrev))
 (require 'mime-edit)
 (eval-when-compile (require 'static))
 
@@ -664,13 +667,15 @@ Doing so would be even more evil than leaving it out."
 
 (defcustom message-qmail-inject-args nil
   "Arguments passed to qmail-inject programs.
-This should be a list of strings, one string for each argument.
+This should be a list of strings, one string for each argument.  It
+may also be a function.
 
 For e.g., if you wish to set the envelope sender address so that bounces
 go to the right place or to deal with listserv's usage of that address, you
 might set this variable to '(\"-f\" \"you@some.where\")."
   :group 'message-sending
-  :type '(repeat string))
+  :type '(choice (function)
+		 (repeat string)))
 
 (defvar message-cater-to-broken-inn t
   "Non-nil means Gnus should not fold the `References' header.
@@ -841,8 +846,6 @@ citation between (point) and (mark t).  And each function should leave
 point and mark around the citation text as modified."
   :type 'function
   :group 'message-insertion)
-
-(defvar message-abbrevs-loaded nil)
 
 ;;;###autoload
 (defcustom message-signature t
@@ -1439,7 +1442,6 @@ no, only reply back to the author."
   (autoload 'gnus-point-at-bol "gnus-util")
   (autoload 'gnus-output-to-rmail "gnus-util")
   (autoload 'gnus-output-to-mail "gnus-util")
-  (autoload 'mail-abbrev-in-expansion-header-p "mailabbrev")
   (autoload 'nndraft-request-associate-buffer "nndraft")
   (autoload 'nndraft-request-expire-articles "nndraft")
   (autoload 'gnus-open-server "gnus-int")
@@ -3556,7 +3558,9 @@ to find out how to use this."
 	;; free for -inject-arguments -- a big win for the user and for us
 	;; since we don't have to play that double-guessing game and the user
 	;; gets full control (no gestapo'ish -f's, for instance).  --sj
-	message-qmail-inject-args))
+	(if (functionp 'message-qmail-inject-args)
+	    (funcall 'message-qmail-inject-args)
+	  message-qmail-inject-args)))
     ;; qmail-inject doesn't say anything on it's stdout/stderr,
     ;; we have to look at the retval instead
     (0 nil)
